tests/snapshots/file@variable@uninitialized.lox.snap
---
source: tests/common/mod.rs
description: "var a;\nprint a; // expect: nil\n"
input_file: test_files/variable/uninitialized.lox
---
OUT: 
nil
RET: a

===
ERR:
