tests/snapshots/file@variable@use_nil_as_var.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'nil': Expect variable name.\nvar nil = \"value\";\n"
input_file: test_files/variable/use_nil_as_var.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected Ident, found 'nil'
   ╭─[2:5]
 1 │ // [line 2] Error at 'nil': Expect variable name.
 2 │ var nil = "value";
   ·     ─┬─
   ·      ╰── here
   ╰────
