tests/snapshots/file@while@closure_in_body.lox.snap
---
source: tests/common/mod.rs
description: "var f1;\nvar f2;\nvar f3;\n\nvar i = 1;\nwhile (i < 4) {\n  var j = i;\n  fun f() { print j; }\n\n  if (j == 1) f1 = f;\n  else if (j == 2) f2 = f;\n  else f3 = f;\n\n  i = i + 1;\n}\n\nf1(); // expect: 1\nf2(); // expect: 2\nf3(); // expect: 3\n"
input_file: crafting_interpreters_test_files/while/closure_in_body.lox
---
OUT: 

===
ERR: 
  × undefined variable `j`
   ╭─[1:1]
 1 │ var f1;
   · ───┬──
   ·    ╰── here
 2 │ var f2;
   ╰────
