tests/snapshots/file@while@return_inside.lox.snap
---
source: tests/common/mod.rs
description: "fun f() {\n  while (true) {\n    var i = \"i\";\n    return i;\n  }\n}\n\nprint f();\n// expect: i\n"
input_file: crafting_interpreters_test_files/while/return_inside.lox
---
OUT: 
i

===
ERR:
